Clean up base directory structure and files

--- a/sandbox/test.html
+++ b/sandbox/test.html
@@ -3,8 +3,7 @@
 
   <head>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular.min.js"></script>
-    <link href="stylesheets/stylesheet.css" rel="stylesheet"/>
-    <script src="javascripts/controller.js"></script>
+    <script src="controller.js"></script>
   </head>
 
   <body>
