--- a/sandbox/test3.html
+++ b/sandbox/test3.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>angular</title>
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.2/angular.min.js"></script>
-  <script src="javascripts/moby.js"></script>
+  <script src="moby.js"></script>
 </head>
 <body>
 
