--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <section id="downloads" class="clearfix">
           <a href="https://github.com/bwisegithub/music-discoverer/zipball/gh-pages" id="download-zip" class="button"><span>Download .zip</span></a>
           <a href="https://github.com/bwisegithub/music-discoverer/tarball/gh-pages" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
-          <a href="https://github.com/bwisegithub/music-discoverer" id="view-on-github" class="button"><span>View on GitHub</span></a>
+          <a target="_blank" href="https://github.com/bwisegithub/music-discoverer" id="view-on-github" class="button"><span>View on GitHub</span></a>
         </section>
 
         <hr>
@@ -35,15 +35,32 @@
 <a id="test" class="anchor" href="#test" aria-hidden="true"><span class="octicon octicon-link"></span></a>Test</h3>
 
 <p>Testy</p>
+
+          <div ng-app="myApp" ng-controller="customersCtrl"> 
+            <ul>
+              <li ng-repeat="x in names">
+                {{ x.Name + ', ' + x.Country }}
+              </li>
+            </ul>
+          </div>
+
         </section>
 
         <footer>
-          music-discoverer is maintained by <a href="https://github.com/bwisegithub">bwisegithub</a>.<br>
-          Tactile theme by <a href="https://twitter.com/jasonlong">Jason Long</a>.
+          music-discoverer is maintained by <a target="_blank" href="https://github.com/bwisegithub">bwisegithub</a>.<br>
+          theme based on github pages <a target="_blank" href="https://github.com/jasonlong/tactile-theme">tactile theme</a> by <a target="_blank" href="https://twitter.com/jasonlong">jason long</a>.
         </footer>
-
         
       </div>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js">
+    </script>
+    <script>
+      var app = angular.module('myApp', []);
+      app.controller('customersCtrl', function($scope, $http) {
+        $http.get("http://www.w3schools.com/angular/customers.php")
+        .success(function (response) {$scope.names = response.records;});
+      });
+    </script>
   </body>
 </html>
