--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <link href='https://fonts.googleapis.com/css?family=Chivo:900' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+    <link rel="stylesheet" href="stylesheets/css_resets.css">
+    <link rel="stylesheet" href="stylesheets/tactile_screen.css" media="screen">
+    <link rel="stylesheet" href="stylesheets/tactile_print.css" media="print">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -31,10 +31,9 @@
         <hr>
 
         <section id="main_content">
-          <h3>
-<a id="test" class="anchor" href="#test" aria-hidden="true"><span class="octicon octicon-link"></span></a>Test</h3>
-
-<p>Testy</p>
+          
+          <h3>Test</h3>
+            <p>Testy <a href="http://www.google.com">test link</a>.</p>
 
           <div ng-app="myApp" ng-controller="customersCtrl"> 
             <ul>
@@ -53,8 +52,7 @@
         
       </div>
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js">
-    </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
     <script>
       var app = angular.module('myApp', []);
       app.controller('customersCtrl', function($scope, $http) {
