--- a/sandbox/test_style.html
+++ b/sandbox/test_style.html
@@ -4,9 +4,9 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <link href='https://fonts.googleapis.com/css?family=Chivo:900' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="../stylesheets/css_resets.css">
-    <link rel="stylesheet" href="../stylesheets/tactile_screen.css" media="screen">
-    <link rel="stylesheet" href="../stylesheets/tactile_print.css" media="print">
+    <link rel="stylesheet" href="../css/css_resets.css">
+    <link rel="stylesheet" href="../css/tactile_screen.css" media="screen">
+    <link rel="stylesheet" href="../css/tactile_print.css" media="print">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
