--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <link href='https://fonts.googleapis.com/css?family=Chivo:900' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Chivo:900' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/css_resets.css">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/tactile_screen.css" media="screen">
     <link rel="stylesheet" href="css/tactile_print.css" media="print">
+    <link rel="stylesheet" href="css/app.css">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -32,17 +34,6 @@
 
         <section id="main_content">
 
-          <h3>Test</h3>
-            <p>Testy <a href="http://www.google.com">test link</a>.</p>
-
-          <div ng-app="myApp" ng-controller="customersCtrl"> 
-            <ul>
-              <li ng-repeat="x in names">
-                {{ x.Name + ', ' + x.Country }}
-              </li>
-            </ul>
-          </div>
-
         </section>
 
         <footer>
@@ -52,13 +43,19 @@
         
       </div>
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
-    <script>
-      var app = angular.module('myApp', []);
-      app.controller('customersCtrl', function($scope, $http) {
-        $http.get("http://www.w3schools.com/angular/customers.php")
-        .success(function (response) {$scope.names = response.records;});
-      });
-    </script>
+
+    <!-- External JS Libraries -->
+    <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+    <!-- Angular Modules -->
+    <script src="js/app.js"></script>
+    <!-- Directives -->
+    <script src="js/directives/randomButton.js"></script>
+    <!-- Angular Controllers -->
+    <script src="js/controllers/SearchController.js"></script>
+    <!-- Angular Services -->
+    <script src="js/services/DbpediaService.js"></script>
+
   </body>
 </html>
