--- a/index.html
+++ b/index.html
@@ -1,61 +1,64 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <link href='http://fonts.googleapis.com/css?family=Chivo:900' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="css/css_resets.css">
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/tactile_screen.css" media="screen">
-    <link rel="stylesheet" href="css/tactile_print.css" media="print">
-    <link rel="stylesheet" href="css/app.css">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <title>music-discoverer by bwisegithub</title>
-  </head>
+  	<head>
+		<meta charset='utf-8'>
+		<meta http-equiv="X-UA-Compatible" content="chrome=1">
+		<link href='http://fonts.googleapis.com/css?family=Chivo:900' rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" href="css/css_resets.css">
+		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+		<link rel="stylesheet" href="css/tactile_screen.css" media="screen">
+		<link rel="stylesheet" href="css/tactile_print.css" media="print">
+		<link rel="stylesheet" href="css/app.css">
+		<!--[if lt IE 9]>
+		<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+		<![endif]-->
+		<title>music-discoverer by bwisegithub</title>
+  	</head>
 
-  <body>
-    <div id="container">
-      <div class="inner">
+	 <body ng-app="MusicDiscovererApp">
+		<div id="container">
+			 <div class="inner">
 
-        <header>
-          <h1>music-discoverer</h1>
-          <h2>Discover musician-relatedness and associated chatter</h2>
-        </header>
+				<header>
+					 <h1>music-discoverer</h1>
+					 <h2>Discover musician-relatedness and associated chatter</h2>
+				</header>
 
-        <section id="downloads" class="clearfix">
-          <a href="https://github.com/bwisegithub/music-discoverer/zipball/gh-pages" id="download-zip" class="button"><span>Download .zip</span></a>
-          <a href="https://github.com/bwisegithub/music-discoverer/tarball/gh-pages" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
-          <a target="_blank" href="https://github.com/bwisegithub/music-discoverer" id="view-on-github" class="button"><span>View on GitHub</span></a>
-        </section>
+				<section id="downloads" class="clearfix">
+					<a target="_blank" href="https://github.com/bwisegithub/music-discoverer" id="view-on-github" class="button"><span>View on GitHub</span></a>
+					<a href="https://github.com/bwisegithub/music-discoverer/zipball/gh-pages" id="download-zip" class="button"><span>Download .zip</span></a>
+					<a href="https://github.com/bwisegithub/music-discoverer/tarball/gh-pages" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
+				</section>
 
-        <hr>
+				<hr>
 
-        <section id="main_content">
+				<section id="main_content">
+				  	<div ng-view></div>
+				</section>
 
-        </section>
+				<footer>
+					 music-discoverer is maintained by <a target="_blank" href="https://github.com/bwisegithub">bwisegithub</a>.<br>
+					 theme based on github pages <a target="_blank" href="https://github.com/jasonlong/tactile-theme">tactile theme</a> by <a target="_blank" href="https://twitter.com/jasonlong">jason long</a>.
+				</footer>
+				
+			 </div>
+		</div>
 
-        <footer>
-          music-discoverer is maintained by <a target="_blank" href="https://github.com/bwisegithub">bwisegithub</a>.<br>
-          theme based on github pages <a target="_blank" href="https://github.com/jasonlong/tactile-theme">tactile theme</a> by <a target="_blank" href="https://twitter.com/jasonlong">jason long</a>.
-        </footer>
-        
-      </div>
-    </div>
+		<!-- External JS Libraries -->
+		<script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-route.js"></script>
+		<!-- Angular Modules -->
+		<script src="js/app.js"></script>
+		<!-- Directives -->
+		<script src="js/directives/randomButton.js"></script>
+		<!-- Angular Controllers -->
+		<script src="js/controllers/SearchController.js"></script>
+		<script src="js/controllers/ResultListController.js"></script>
+		<script src="js/controllers/MusicianController.js"></script>
+		<!-- Angular Services -->
+		<script src="js/services/DbpediaService.js"></script>
 
-    <!-- External JS Libraries -->
-    <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
-    <!-- Angular Modules -->
-    <script src="js/app.js"></script>
-    <!-- Directives -->
-    <script src="js/directives/randomButton.js"></script>
-    <!-- Angular Controllers -->
-    <script src="js/controllers/SearchController.js"></script>
-    <!-- Angular Services -->
-    <script src="js/services/DbpediaService.js"></script>
-
-  </body>
+	 </body>
 </html>
