Add SPARQL query string service; enable basic dbpedia query and display

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 		<script src="js/controllers/ResultListController.js"></script>
 		<script src="js/controllers/MusicianController.js"></script>
 		<!-- Angular Services -->
+		<script src="js/services/SparqlQueryJsonService.js"></script>
 		<script src="js/services/DbpediaService.js"></script>
 
 	 </body>
