Replace double with single quotes in JS; enable random offset based on count

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 
 				<footer>
 					 music-discoverer is maintained by <a target="_blank" href="https://github.com/bwisegithub">bwisegithub</a>.<br>
-					 theme based on github pages <a target="_blank" href="https://github.com/jasonlong/tactile-theme">tactile theme</a> by <a target="_blank" href="https://twitter.com/jasonlong">jason long</a>.
+					 theme based on github pages <a target="_blank" href="https://github.com/jasonlong/tactile-theme">tactile theme</a> by <a target="_blank" href="https://twitter.com/jasonlong">jason long</a>.<br>
+					 content generated from <a target="_blank" href="http://dbpedia.org">dbpedia.org</a>
 				</footer>
 				
 			 </div>
