Migrate "Waiting for/No" results to new directive

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 		<!-- Angular Modules -->
 		<script src="js/app.js"></script>
 		<!-- Directives -->
+		<script src="js/directives/mdResultsPlaceholder.js"></script>
 		<script src="js/directives/mdImg.js"></script>
 		<script src="js/directives/fallbackSrc.js"></script>
 		<!-- Angular Controllers -->
