--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" href="css/tactile_screen.css" media="screen">
 		<link rel="stylesheet" href="css/tactile_print.css" media="print">
 		<link rel="stylesheet" href="css/app.css">
+		<link rel="icon" type="image/x-icon" href="favicon.ico">
 		<!--[if lt IE 9]>
 		<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
