--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<hr>
 
 				<section id="main_content">
-				  	<div ng-view></div>
+				  	<div ng-view ng-class="{ waiting: waitingForResponse }"></div>
 				</section>
 
 				<footer>
