--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<link href='http://fonts.googleapis.com/css?family=Chivo:900' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/css_resets.css">
 		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 		<link rel="stylesheet" href="css/tactile_screen.css" media="screen">
 		<link rel="stylesheet" href="css/tactile_print.css" media="print">
 		<link rel="stylesheet" href="css/app.css">
