Add styling to search page and misc cleanup

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 
 				<header>
 					 <h1>music-discoverer</h1>
-					 <h2>Discover musician-relatedness and associated chatter</h2>
+					 <h2>discover musician-relatedness and associated chatter</h2>
 				</header>
 
 				<section id="downloads" class="clearfix">
-					<a target="_blank" href="https://github.com/bwisegithub/angularjs-music-discoverer" id="view-on-github" class="button"><span>View on GitHub</span></a>
-					<a href="https://github.com/bwisegithub/angularjs-music-discoverer/zipball/gh-pages" id="download-zip" class="button"><span>Download .zip</span></a>
-					<a href="https://github.com/bwisegithub/angularjs-music-discoverer/tarball/gh-pages" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
+					<a target="_blank" href="https://github.com/bwisegithub/angularjs-music-discoverer" id="view-on-github" class="button"><span>view on GitHub</span></a>
+					<a href="https://github.com/bwisegithub/angularjs-music-discoverer/zipball/gh-pages" id="download-zip" class="button"><span>download .zip</span></a>
+					<a href="https://github.com/bwisegithub/angularjs-music-discoverer/tarball/gh-pages" id="download-tar-gz" class="button"><span>download .tar.gz</span></a>
 				</section>
 
 				<hr>
@@ -42,7 +42,7 @@
 				<footer>
 					 music-discoverer is maintained by <a target="_blank" href="https://github.com/bwisegithub">bwisegithub</a>.<br>
 					 theme based on github pages <a target="_blank" href="https://github.com/jasonlong/tactile-theme">tactile theme</a> by <a target="_blank" href="https://twitter.com/jasonlong">jason long</a>.<br>
-					 content generated from <a target="_blank" href="http://dbpedia.org">dbpedia.org</a>
+					 content generated from <a target="_blank" href="http://dbpedia.org">dbpedia.org</a>.
 				</footer>
 				
 			 </div>
