--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 		<meta charset='utf-8'>
 		<meta http-equiv="X-UA-Compatible" content="chrome=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link href='http://fonts.googleapis.com/css?family=Chivo:900' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Chivo:900' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/css_resets.css">
-		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 		<link rel="stylesheet" href="css/tactile_screen.css" media="screen">
 		<link rel="stylesheet" href="css/tactile_print.css" media="print">
 		<link rel="stylesheet" href="css/app.css">
@@ -23,12 +23,12 @@
 			 <div class="inner">
 
 				<header>
-					 <h1>music-discoverer</h1>
+					 <h1>music discoverer</h1>
 					 <h2>discover musician-relatedness and associated chatter</h2>
 				</header>
 
 				<section id="downloads" class="clearfix">
-					<a target="_blank" href="https://github.com/bwisegithub/angularjs-music-discoverer" id="view-on-github" class="button"><span>view on GitHub</span></a>
+					<a target="_blank" href="https://github.com/bwisegithub/angularjs-music-discoverer" id="view-on-github" class="button"><span>view on github</span></a>
 					<a href="https://github.com/bwisegithub/angularjs-music-discoverer/zipball/gh-pages" id="download-zip" class="button"><span>download .zip</span></a>
 					<a href="https://github.com/bwisegithub/angularjs-music-discoverer/tarball/gh-pages" id="download-tar-gz" class="button"><span>download .tar.gz</span></a>
 				</section>
@@ -40,19 +40,19 @@
 				</section>
 
 				<footer>
-					 music-discoverer is maintained by <a target="_blank" href="https://github.com/bwisegithub">bwisegithub</a>.<br>
+					 music discoverer is maintained by <a target="_blank" href="https://github.com/bwisegithub">bwisegithub</a>.<br>
 					 theme based on github pages <a target="_blank" href="https://github.com/jasonlong/tactile-theme">tactile theme</a> by <a target="_blank" href="https://twitter.com/jasonlong">jason long</a>.<br>
-					 content generated from <a target="_blank" href="http://dbpedia.org">dbpedia.org</a>.
+					 data sources are <a target="_blank" href="http://dbpedia.org">dbpedia</a> and <a target="_blank" href="https://twitter.com">twitter</a>.
 				</footer>
 				
 			 </div>
 		</div>
 
 		<!-- External JS Libraries -->
-		<script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
-		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-route.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-route.js"></script>
 		<!-- Angular Modules -->
 		<script src="js/app.js"></script>
 		<!-- Directives -->
