Mod mdImg directive to accept a class and display rounded images

--- a/js/directives/mdImg.html
+++ b/js/directives/mdImg.html
@@ -1,1 +1,1 @@
-<img ng-src="{{ mdimgval }}" md-fallback-src="none" alt="{{ mdimgalt }}">
+<img class="img-rounded {{ mdimgclass }}" ng-src="{{ mdimgval }}" md-fallback-src="none" alt="{{ mdimgalt }}">
