--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
 		<script src="js/app.js"></script>
 		<!-- Directives -->
 		<script src="js/directives/mdResultsPlaceholder.js"></script>
-		<script src="js/directives/mdImg.js"></script>
 		<script src="js/directives/mdFallbackSrc.js"></script>
+		<script src="js/directives/mdImg.js"></script>
+		<script src="js/directives/mdThumbImg.js"></script>
 		<!-- Angular Controllers -->
 		<script src="js/controllers/SearchController.js"></script>
 		<script src="js/controllers/ResultListController.js"></script>
