Add some styling to musician view

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				<footer>
 					 music discoverer is maintained by <a target="_blank" href="https://github.com/bwisegithub">bwisegithub</a>.<br>
 					 theme based on github pages <a target="_blank" href="https://github.com/jasonlong/tactile-theme">tactile theme</a> by <a target="_blank" href="https://twitter.com/jasonlong">jason long</a>.<br>
-					 data sources are <a target="_blank" href="http://dbpedia.org">dbpedia</a> and <a target="_blank" href="https://twitter.com">twitter</a>.
+					 data sources are <a target="_blank" href="http://dbpedia.org">dbpedia</a> (<a target="_blank" href="http://creativecommons.org/licenses/by-sa/3.0/">CC-BY-SA-3.0</a>) and <a target="_blank" href="https://twitter.com">twitter</a>.
 				</footer>
 				
 			 </div>
@@ -60,6 +60,7 @@
 		<script src="js/directives/mdFallbackSrc.js"></script>
 		<script src="js/directives/mdImg.js"></script>
 		<script src="js/directives/mdThumbImg.js"></script>
+		<script src="js/directives/mdFeaturedImg.js"></script>
 		<!-- Angular Controllers -->
 		<script src="js/controllers/SearchController.js"></script>
 		<script src="js/controllers/ResultListController.js"></script>
