--- a/index.html
+++ b/index.html
@@ -36,13 +36,14 @@
 				<hr>
 
 				<section id="main_content">
-				  	<div ng-view ng-class="{ 'cursor-waiting': waitingForResponse }"></div>
+				  	<div ng-view></div>
 				</section>
 
 				<footer>
-					 music discoverer is maintained by <a target="_blank" href="https://github.com/bwisegithub">bwisegithub</a>.<br>
-					 theme based on github pages <a target="_blank" href="https://github.com/jasonlong/tactile-theme">tactile theme</a> by <a target="_blank" href="https://twitter.com/jasonlong">jason long</a>.<br>
-					 data sources are <a target="_blank" href="http://dbpedia.org">dbpedia</a> (<a target="_blank" href="http://creativecommons.org/licenses/by-sa/3.0/">CC-BY-SA-3.0</a>) and <a target="_blank" href="https://twitter.com">twitter</a>.
+					music discoverer is maintained by <a target="_blank" href="https://github.com/bwisegithub">bwisegithub</a>.<br>
+					theme based on github pages <a target="_blank" href="https://github.com/jasonlong/tactile-theme">tactile theme</a> by <a target="_blank" href="https://twitter.com/jasonlong">jason long</a>.<br>
+					css <a target="_blank" href="http://fontawesome.io">font awesome</a> by <a target="_blank" href="https://twitter.com/davegandy">dave gandy</a>.<br>
+					data sources: <a target="_blank" href="http://dbpedia.org">dbpedia</a> (<a target="_blank" href="http://creativecommons.org/licenses/by-sa/3.0/">CC-BY-SA-3.0</a>) and <a target="_blank" href="https://twitter.com">twitter</a>.
 				</footer>
 				
 			 </div>
