--- a/js/directives/mdResultsPlaceholder.html
+++ b/js/directives/mdResultsPlaceholder.html
@@ -1,2 +1,2 @@
-<div ng-show="mdresplaceholder === 'show' || (!mdresplaceholder.length && mdresplaceholder.length != 0)"><i class="fa fa-cog fa-spin"></i> waiting for results...</div>
-<div ng-show="mdresplaceholder.length === 0"><i class="fa fa-times fa-fw"></i> no results found</div>
+<div class="results-placeholder" ng-show="mdresplaceholder === 'show' || (!mdresplaceholder.length && mdresplaceholder.length != 0)"><i class="fa fa-cog fa-spin"></i> waiting for results...</div>
+<div class="results-placeholder" ng-show="mdresplaceholder.length === 0"><i class="fa fa-times fa-fw"></i> no results found</div>
