--- a/js/directives/mdFeaturedImg.html
+++ b/js/directives/mdFeaturedImg.html
@@ -1,4 +1,4 @@
-<a href="{{ mdfeaturedobj.thumbnail.value }}" class="button featured-btn">
+<a target="_blank" href="{{ mdfeaturedobj.thumbnail_wm_link.value }}" class="button featured-btn">
 	<span>{{ mdfeaturedobj.label.value }}</span> 
 	<md-img mdimgclass="'featured-img'" mdimgval="mdfeaturedobj.thumbnail.value" mdimgalt=""></md-img>
 </a>
