--- a/index.html
+++ b/index.html
@@ -55,20 +55,20 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-route.js"></script>
 		<!-- Angular Modules -->
-		<script src="js/app.js"></script>
+		<script src="app/app.js"></script>
 		<!-- Directives -->
-		<script src="js/directives/mdResultsPlaceholder.js"></script>
-		<script src="js/directives/mdFallbackSrc.js"></script>
-		<script src="js/directives/mdImg.js"></script>
-		<script src="js/directives/mdThumbImg.js"></script>
-		<script src="js/directives/mdFeaturedImg.js"></script>
+		<script src="app/directives/mdResultsPlaceholder.js"></script>
+		<script src="app/directives/mdFallbackSrc.js"></script>
+		<script src="app/directives/mdImg.js"></script>
+		<script src="app/directives/mdThumbImg.js"></script>
+		<script src="app/directives/mdFeaturedImg.js"></script>
 		<!-- Angular Controllers -->
-		<script src="js/controllers/SearchController.js"></script>
-		<script src="js/controllers/ResultListController.js"></script>
-		<script src="js/controllers/MusicianController.js"></script>
+		<script src="app/controllers/SearchController.js"></script>
+		<script src="app/controllers/ResultListController.js"></script>
+		<script src="app/controllers/MusicianController.js"></script>
 		<!-- Angular Services -->
-		<script src="js/services/SparqlQueryJsonService.js"></script>
-		<script src="js/services/DbpediaService.js"></script>
+		<script src="app/services/SparqlQueryJsonService.js"></script>
+		<script src="app/services/DbpediaService.js"></script>
 
 	 </body>
 </html>
