Add tooltip for genre buttons with new mdTooltip directive

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 		<script src="app/directives/mdImg.js"></script>
 		<script src="app/directives/mdThumbImg.js"></script>
 		<script src="app/directives/mdFeaturedImg.js"></script>
+		<script src="app/directives/mdTooltip.js"></script>
 		<!-- Angular Controllers -->
 		<script src="app/controllers/SearchController.js"></script>
 		<script src="app/controllers/ResultListController.js"></script>
