Change link to creativecommons.org to be https

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				<footer>
 					music discoverer is maintained by <a target="_blank" href="https://github.com/bwisegithub">bwisegithub</a>.<br>
 					theme based on github pages <a target="_blank" href="https://github.com/jasonlong/tactile-theme">tactile theme</a> by <a target="_blank" href="https://twitter.com/jasonlong">jason long</a>.<br>
-					data sources: <a target="_blank" href="http://dbpedia.org">dbpedia</a> (<a target="_blank" href="http://creativecommons.org/licenses/by-sa/3.0/">CC BY-SA 3.0</a>) and <a target="_blank" href="https://twitter.com">twitter</a>.<br>
+					data sources: <a target="_blank" href="http://dbpedia.org">dbpedia</a> (<a target="_blank" href="https://creativecommons.org/licenses/by-sa/3.0/">CC BY-SA 3.0</a>) and <a target="_blank" href="https://twitter.com">twitter</a>.<br>
 					images: <a target="_blank" href="https://commons.wikimedia.org">wikimedia</a> (click on image for attr and license).
 				</footer>
 				
