--- a/app/directives/mdFeaturedImg.html
+++ b/app/directives/mdFeaturedImg.html
@@ -1,4 +1,4 @@
-<a target="_blank" href="{{ mdfeaturedobj.thumbnail_wm_link.value }}" class="button featured-btn">
+<a target="{{ mdfeaturedobj.thumbnail_wm_link.value ? '_blank' : '_self' }} " href="{{ mdfeaturedobj.thumbnail_wm_link.value ? mdfeaturedobj.thumbnail_wm_link.value : 'javaScript:void(0);' }}" class="button featured-btn">
 	<span>{{ mdfeaturedobj.label.value }}</span> 
 	<md-img mdimgclass="'featured-img'" mdimgval="mdfeaturedobj.thumbnail.value" mdimgalt=""></md-img>
 </a>
