Begin to add d3.js functionality

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<link rel="stylesheet" href="css/tactile_screen.css" media="screen">
 		<link rel="stylesheet" href="css/tactile_print.css" media="print">
 		<link rel="stylesheet" href="css/app.css">
+		<link rel="stylesheet" href="css/app_d3.css">
 		<link rel="icon" type="image/x-icon" href="favicon.ico">
 		<!--[if lt IE 9]>
 		<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -55,6 +56,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-route.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.13.0/ui-bootstrap-tpls.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
 		<!-- Angular Modules -->
 		<script src="app/app.js"></script>
 		<!-- Directives -->
@@ -64,6 +66,8 @@
 		<script src="app/directives/mdThumbImg.js"></script>
 		<script src="app/directives/mdFeaturedImg.js"></script>
 		<script src="app/directives/mdTooltip.js"></script>
+		<script src="app/directives/mdD3Timeline.js"></script>
+		<script src="app/directives/mdD3ForceGraph.js"></script>
 		<!-- Angular Controllers -->
 		<script src="app/controllers/SearchController.js"></script>
 		<script src="app/controllers/ResultListController.js"></script>
