Refine d3 extended associations force graph and related

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
 					music discoverer is maintained by <a target="_blank" href="https://github.com/bwisegithub">bwisegithub</a>.<br>
 					theme based on github pages <a target="_blank" href="https://github.com/jasonlong/tactile-theme">tactile theme</a> by <a target="_blank" href="https://twitter.com/jasonlong">jason long</a>.<br>
 					data source: <a target="_blank" href="http://dbpedia.org">dbpedia</a> (<a target="_blank" href="https://creativecommons.org/licenses/by-sa/3.0/">CC BY-SA 3.0</a>).<br>
-					images: <a target="_blank" href="https://commons.wikimedia.org">wikimedia</a> (click on image for attr and license).
+					images: <a target="_blank" href="https://commons.wikimedia.org">wikimedia</a> (click on image for attr and license).<br>
+					<a target="_blank" href="https://github.com/mbostock/d3">d3.js graphing library</a> by <a target="_blank" href="https://github.com/mbostock">michael bostock</a> (<a target="_blank" href="https://github.com/mbostock/d3/blob/master/LICENSE">BSD-3</a>).
 				</footer>
 				
 			 </div>
