--- a/app/directives/mdD3ForceGraph.html
+++ b/app/directives/mdD3ForceGraph.html
@@ -1,1 +1,3 @@
+<div class="instructions"><i class="fa fa-hand-o-right fa-fw"></i> drag to pin. click to release. double tap to view.</div>
 <div id="force-graph"></div>
+
