Add youTube results and related directives etc

--- a/app/directives/mdThumbImg.html
+++ b/app/directives/mdThumbImg.html
@@ -1,4 +1,4 @@
-<a href="#/musician/{{ mdthumbobj.id.value }}" class="button thumb-btn">
+<a class="button thumb-btn" href="#/musician/{{ mdthumbobj.id.value }}">
 	<span>{{ mdthumbobj.label.value }}</span> 
 	<md-img mdimgclass="'thumb-img'" mdimgval="mdthumbobj.thumbnail.value" mdimgalt=""></md-img>
 </a>
