--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 		<script src="app/directives/mdFeaturedImg.js"></script>
 		<script src="app/directives/mdTooltip.js"></script>
 		<script src="app/directives/mdD3ForceGraph.js"></script>
+		<script src="app/directives/mdYouTubeImg.js"></script>
 		<!-- Angular Controllers -->
 		<script src="app/controllers/SearchController.js"></script>
 		<script src="app/controllers/ResultListController.js"></script>
@@ -74,6 +75,7 @@
 		<!-- Angular Services -->
 		<script src="app/services/SparqlQueryJsonService.js"></script>
 		<script src="app/services/DbpediaService.js"></script>
+		<script src="app/services/YouTubeService.js"></script>
 
 	 </body>
 </html>
