--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 				<header>
 					 <h1>music discoverer</h1>
-					 <h2>discover musician-relatedness</h2>
+					 <h2>discover musician relatedness</h2>
 				</header>
 
 				<section id="downloads" class="clearfix">
